add index.html file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Nic's Website!</title>
+    <link rel="stylesheet" href="system.css"
   </head>
 
   <body>
@@ -9,11 +10,11 @@
     <div>
       <nav>
         <h1>Nicholas's Sellers website</h1>
-        <ul>
-          <li>
+        <ul id=nav-ul">
+          <li class="nav-li">
             <a href="index.html"> Home </a>
           </li>
-          <li>
+          <li class="nav-li">
             <a href="portfolio.html"> Portfolio </a>
           </li>
         </ul>
@@ -21,13 +22,16 @@
 
       <main>
         <!--sidebar-->
-        <div>
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn56Lbtk8vCWuabwyWuLfBKx-rqpCbsBkH_mCABKU6A9bEjSogZlrVQwI14kyGJ2BH3V4:https://i.ytimg.com/vi/UGCCcQtTmwU/maxresdefault.jpg&usqp=CAU">
+        <div class ="sidebar">
+          <img class = "sidebar-img"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn56Lbtk8vCWuabwyWuLfBKx-rqpCbsBkH_mCABKU6A9bEjSogZlrVQwI14kyGJ2BH3V4:https://i.ytimg.com/vi/UGCCcQtTmwU/maxresdefault.jpg&usqp=CAU"
+          />
         </div>
         <!--content-->
-        <div>
+        <div id="allcontents" class="content">
           <h2>Nicholas Sellers</h2>
           <p>Student at EAHS</p>
+
           <!--interests-->
           <h3>Interests</h3>
           <ul>
