--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Nic's Website!</title>
-    <link rel="stylesheet" href="system.css"
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWvvW_rivMTY_5DgJHOBhKq1Ju8hdYXQ52SUeKt6J_MCnfFpjnYrmAl9Z5LEpeXv3SR7E:https://i.pinimg.com/originals/e1/ff/fb/e1fffbe0de1c60a3edd251c3ce628a70.jpg&usqp=CAU">
+
   </head>
 
   <body>
