--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Nic's Portfolio</title>
-    <link rel="sytlesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <div id="all-contents"></div>
+    <div id="all-contents">
     <nav>
       <h1>Nic's Webstite</h1>
       <ul id="nav-ul">
@@ -17,28 +17,21 @@
           <a class="nav-a" href="portfolio.html">Portfolio</a>
         </li>
       </ul>
+     
     </nav>
+    </div>
     <main>
       <div class="content">
         <h1>Portfolio</h1>
         <ul id="portfolio">
           <li>
-            <a href="projects/platformer/"
-              >Platformer : A cannon - dodging, collectible - grabbing adventure
-              game for Halleb0t</a
-            >
+            <a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a>
           </li>
           <li>
-            <a href="projects/bouncing-box/"
-              >Bouncing Box : A project that gives you a taste of game
-              development on the web
-            </a>
+            <a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web</a>
           </li>
           <li>
-            <a href="projects/circularity/"
-              >Circularity : A motion poem using random number generation and
-              velocity applied to circle shapes...</a
-            >
+            <a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a>
           </li>
         </ul>
       </div>
